--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Will Fuchs
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Software Engineering Student from San Francisco
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/8964608?s=400&u=685e53c9bfc38eb621ff3ed85746d9f30d1e6e2b&v=4
 
 #
 # Flags below are optional
